feat: Integrate PDF.js for text extraction and improve editor
Integrates pdfjs-dist for robust PDF text extraction, replacing the previous approach. Refactors the `ExportService` to better handle HTML content in `generateDocx`, stripping HTML tags and formatting for cleaner output.

Enhances the `Editor` component by:
- Replacing basic textarea with a rich text editor for better content formatting.
- Adding formatting toolbar buttons (Bold, List).
- Implementing a "Peek" functionality to show AI suggestions without immediately applying them.
- Streamlining loading states and suggestion display.

Updates dependencies and import maps to include `pdfjs-dist`.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "docx": "https://esm.sh/docx@^9.5.1",
     "file-saver": "https://esm.sh/file-saver@^2.0.5",
-    "jspdf": "https://esm.sh/jspdf@^2.5.1"
+    "jspdf": "https://esm.sh/jspdf@^2.5.1",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.449"
   }
 }
 </script>
