--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     "docx": "https://esm.sh/docx@^9.5.1",
     "file-saver": "https://esm.sh/file-saver@^2.0.5",
     "jspdf": "https://esm.sh/jspdf@^2.5.1",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.449"
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.449",
+    "path": "https://esm.sh/path@^0.12.7",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
