--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; }
+        #root:empty { background: white; }
     </style>
 <script type="importmap">
 {
@@ -19,6 +20,7 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "docx": "https://esm.sh/docx@^9.5.1",
     "file-saver": "https://esm.sh/file-saver@^2.0.5",
@@ -33,5 +35,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <!-- الربط بملف التشغيل الرئيسي -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
